navbar items alignment fix

--- a/style.css
+++ b/style.css
@@ -21,12 +21,12 @@ body {
 }
 .navbar-brand li {
     padding: 0 10px;
+    margin-right: 20px;
 }
 .navbar-nav li a {
     color: #fff !important;
     font-weight: 600;
-    float: right;
-    text-align: left;
+    text-align: center;
 }
 .navbar-toggler {
     outline: none !important;
